# DDD_Learning

./: .pre-commit-config.yaml  main.py  mkdocs.yml  pyproject.toml
ddd_course/: README.md
ddd_course/aggregates_06/: advanced_aggregates_example_03.py  advanced_example_03.md  aggregates_01.md  aggregates_example_02.py  code_example_02.md  exercise_05.md  quiz_03.md  quiz_answers_04.md  solution_06.md
ddd_course/aggregates_06/tests/: test_aggregates_example.py
ddd_course/application_services_09/: application_services_01.md  application_services_example_02.py  exercise_05.md  quiz_03.md  quiz_answers_04.md  solution_06.md
ddd_course/application_services_09/tests/: test_application_services_example.py
ddd_course/architecture_10/: architecture_01.md  architecture_example_02.py  exercise_05.md  quiz_03.md  quiz_answers_04.md  solution_06.md  tests_07.md
ddd_course/bounded_contexts_03/: bounded_contexts_01.md  bounded_contexts_example_02.py  code_example_02.md  exercise_07.md  solution_06.md
ddd_course/bounded_contexts_03/booking_platform_solution/: README.md  pyproject.toml
ddd_course/bounded_contexts_03/booking_platform_solution/src/: bootstrap.py
ddd_course/bounded_contexts_03/booking_platform_solution/src/accommodation/: __init__.py  application.py  domain.py  infrastructure.py  interfaces.py
ddd_course/bounded_contexts_03/booking_platform_solution/src/accounting/: __init__.py  application.py  domain.py  event_handlers.py  infrastructure.py  interfaces.py
ddd_course/bounded_contexts_03/booking_platform_solution/src/booking/: __init__.py  application.py  domain.py  infrastructure.py  interfaces.py
ddd_course/bounded_contexts_03/booking_platform_solution/src/shared_kernel/: __init__.py  domain.py
ddd_course/domain_events_07/: domain_events_01.md  domain_events_example_02.py  exercise_05.md  quiz_03.md  quiz_answers_04.md  solution_06.md
ddd_course/entities_04/: entities_01.md  entities_example_02.py  exercise_05.md  quiz_03.md  quiz_answers_04.md  solutions_06.py
ddd_course/integration_composition_11/: code_example_02.md  exercise_05.md  quiz_03.md  quiz_answers_04.md  solution_06.md  tests_07.md  theory_01.md
ddd_course/introduction_01/: ddd_basic_example_02.py  exercise_05.md  introduction_01.md  introduction_example_02.py  quiz_03.md  quiz_answers_04.md  solution_06.md  what_is_ddd_01.md
ddd_course/repositories_08/: exercise_05.md  quiz_03.md  quiz_answers_04.md  repositories_01.md  repositories_example_02.py  solution_06.md
ddd_course/ubiquitous_language_02/: code_example_02.md  exercise_05.md  exercise_07.md  quiz_03.md  quiz_answers_04.md  solution_06.md  solution_06.py  task_management_solution_06.py  ubiquitous_language_01.md  ubiquitous_language_example_02.py
ddd_course/value_objects_05/: exercise_05.md  quiz_03.md  quiz_answers_04.md  solution_06.md  value_objects_01.md  value_objects_example_02.py
end_to_end_example/: README.md
end_to_end_example/application/: repositories.py  services.py
end_to_end_example/domain/: course.py  events.py  value_objects.py
end_to_end_example/infrastructure/: repositories.py
(+16 files in other folders)
