[project]
name = "ddd-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=21.12b0",
    "events>=0.3",
    "flake8>=4.0.1",
    "isort>=5.10.1",
    "mkdocs>=1.3.0",
    "mkdocs-material>=7.3.6",
    "mypy>=0.910",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "python-dateutil>=2.8.2",
    "sqlalchemy>=1.4.0",
    "uuid>=1.30",
]
