[project]
name = "ddd-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "events>=0.3",
    "mkdocs>=1.3.0",
    "mkdocs-material>=7.3.6",
    "mypy>=0.910",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "python-dateutil>=2.8.2",
    "sqlalchemy>=1.4.0",
    "uuid>=1.30",
    "pre-commit>=3.0.0",
    "ruff>=0.4.0",
    "pydantic>=2.11.7",
]

[tool.ruff]
line-length = 88
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docs",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "Q",
]
ignore = ["D100", "D104", "D106", "D203", "D212", "D415"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=ddd_course --cov-report=term-missing --cov-report=xml"
testpaths = [
    "ddd_course"
]
pythonpath = [
    "ddd_course"
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.12"
packages = ["ddd_course"]
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    '\\.venv',
    'venv',
    'docs',
    'build',
    'dist',
    '.*migrations.*',
]
