[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "hotel_booking_platform"
version = "0.1.0"
description = "Hotel Booking Platform with DDD Bounded Contexts"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "DDD Course Author", email = "course@example.com"}
]
dependencies = [
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.2",
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0"
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.991",
    "pylint>=2.15.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
